unit tests for DjVuModelImpl, cosmetic refactoring